force-app/main/default/objects/OrderIssued__c/OrderIssued__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os pedidos criados no Hybris.</description>
    <label>Pedido Emitido</label>
    <nameField>
        <displayFormat>PE-{00000000}</displayFormat>
        <label>Id Pedido Emitido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos Emitidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>