force-app/main/default/objects/OrderIssued__c/fields/AccountDocument__c.field-meta.xml
<CustomField>
    <fullName>AccountDocument__c</fullName>
    <formula>AccountId__r.DocumentNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documento</label>
    <type>Text</type>
</CustomField>