force-app/main/default/objects/OrderIssued__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Campo para apresentar a conta relacionada ao pedido emitido.</description>
    <label>Nome da Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos Emitidos</relationshipLabel>
    <relationshipName>PedidosEmitidos</relationshipName>
    <type>Lookup</type>
</CustomField>