force-app/main/default/objects/OrderIssued__c/fields/Adabas__c.field-meta.xml
<CustomField>
    <fullName>Adabas__c</fullName>
    <formula>Owner:User.Adabas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adabas</label>
    <type>Text</type>
</CustomField>