force-app/main/default/objects/OrderIssued__c/fields/AmdocsOrder__c.field-meta.xml
<CustomField>
    <fullName>AmdocsOrder__c</fullName>
    <description>Campo para armazenar o número do pedido na Amdocs.</description>
    <label>N° Pedido Amdocs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>