force-app/main/default/objects/OrderIssued__c/fields/ContractedOffer__c.field-meta.xml
<CustomField>
    <fullName>ContractedOffer__c</fullName>
    <description>Descrição da nova oferta contratada no fluxo.</description>
    <label>Oferta Contratada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>