force-app/main/default/objects/OrderIssued__c/fields/ContractedOfferCode__c.field-meta.xml
<CustomField>
    <fullName>ContractedOfferCode__c</fullName>
    <description>Código da nova oferta contratada.</description>
    <label>Código Oferta Contratada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>