force-app/main/default/objects/OrderIssued__c/fields/ContractedOfferValue__c.field-meta.xml
<CustomField>
    <fullName>ContractedOfferValue__c</fullName>
    <description>Preço da nova oferta contratada.</description>
    <label>Preço Oferta Contratada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>