force-app/main/default/objects/OrderIssued__c/fields/CustomerInteractionTopicId__c.field-meta.xml
<CustomField>
    <fullName>CustomerInteractionTopicId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tópico da Interação</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_cmt__CustomerInteractionTopic__c.vlocity_cmt__AccountId__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_cmt__CustomerInteractionTopic__c</referenceTo>
    <relationshipLabel>Pedidos Emitidos</relationshipLabel>
    <relationshipName>PedidosEmitidos</relationshipName>
    <type>Lookup</type>
</CustomField>