force-app/main/default/objects/OrderIssued__c/fields/FormulaDataUltimaModificacao__c.field-meta.xml
<CustomField>
    <fullName>FormulaDataUltimaModificacao__c</fullName>
    <description>Campo criado temporariamente devido ao erro na obtenção do OrderIssued.LastModifiedDate pelo DataRaptor valGetOrderIssuedDetails, nos ambientes de QA e UAT da Org Valentina. O campo será retirado quando a solução for disponibilizada pela Salesforce.</description>
    <formula>LastModifiedDate</formula>
    <label>FormulaLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>