force-app/main/default/objects/OrderIssued__c/fields/HybrisOrder__c.field-meta.xml
<CustomField>
    <fullName>HybrisOrder__c</fullName>
    <description>Campo para armazenar o número do pedido gerado na Hybris.</description>
    <externalId>true</externalId>
    <label>N° Pedido Hybris</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>