force-app/main/default/objects/OrderIssued__c/fields/MigratedProduct__c.field-meta.xml
<CustomField>
    <fullName>MigratedProduct__c</fullName>
    <description>Produto(s) utilizados no fluxo de migração.</description>
    <label>Produto Migrado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>