force-app/main/default/objects/OrderIssued__c/fields/MigrationType__c.field-meta.xml
<CustomField>
    <fullName>MigrationType__c</fullName>
    <description>Registra o tipo de migração do pedido.</description>
    <label>Tipo de Migração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Troca de Oferta Fixa</fullName>
            </value>
            <value>
                <fullName>Troca de Oferta Móvel</fullName>
            </value>
            <value>
                <fullName>Troca de Oferta Vivo Total</fullName>
            </value>
            <value>
                <fullName>Edição de Plano Fixa</fullName>
            </value>
            <value>
                <fullName>Edição de Plano Vivo Total</fullName>
            </value>
            <value>
                <fullName>Alteração de Plano Fixa</fullName>
                <isActive>false</isActive>
                <label>Alteração de Plano Fixa</label>
            </value>
            <value>
                <fullName>Alteração de Plano Vivo Total</fullName>
                <isActive>false</isActive>
                <label>Alteração de Plano Vivo Total</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>