force-app/main/default/objects/OrderIssued__c/fields/MovimentationType__c.field-meta.xml
<CustomField>
    <fullName>MovimentationType__c</fullName>
    <label>Tipo de Movimentação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pré - Controle</fullName>
            </value>
            <value>
                <fullName>Pré - Pós</fullName>
            </value>
            <value>
                <fullName>Controle - Pré</fullName>
            </value>
            <value>
                <fullName>Controle - Pós</fullName>
            </value>
            <value>
                <fullName>Controle Upgrade</fullName>
            </value>
            <value>
                <fullName>Controle Downgrade</fullName>
            </value>
            <value>
                <fullName>Pós - Controle</fullName>
            </value>
            <value>
                <fullName>Pós - Pré</fullName>
            </value>
            <value>
                <fullName>Pós Upgrade</fullName>
            </value>
            <value>
                <fullName>Pós Downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>