force-app/main/default/objects/OrderIssued__c/fields/OldOffer__c.field-meta.xml
<CustomField>
    <fullName>OldOffer__c</fullName>
    <description>Registra as informações da oferta anterior a migração.</description>
    <label>Oferta Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>