force-app/main/default/objects/OrderIssued__c/fields/OldOfferValue__c.field-meta.xml
<CustomField>
    <fullName>OldOfferValue__c</fullName>
    <description>Registra o preço da Oferta anterior a migração.</description>
    <label>Valor da Oferta Anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>