force-app/main/default/objects/OrderIssued__c/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <label>Status do pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>