force-app/main/default/objects/OrderIssued__c/fields/OwnerPartnerGroup__c.field-meta.xml
<CustomField>
    <fullName>OwnerPartnerGroup__c</fullName>
    <formula>TEXT(Owner:User.PartnerGroup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo do Aliado</label>
    <type>Text</type>
</CustomField>