force-app/main/default/objects/OrderIssued__c/fields/OwnerRole__c.field-meta.xml
<CustomField>
    <fullName>OwnerRole__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Papel Operador</label>
    <type>Text</type>
</CustomField>