force-app/main/default/objects/OrderIssued__c/fields/PortedNumber__c.field-meta.xml
<CustomField>
    <fullName>PortedNumber__c</fullName>
    <description>Campo utilizado para armazenar o número portado</description>
    <label>Número portado</label>
    <type>Phone</type>
</CustomField>