force-app/main/default/objects/OrderIssued__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Campo para armazenar e apresentar o Status do pedido no Hybris.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>WAITING_FOR_DROP_OFF</fullName>
                <label>Aguardando Postagem - pedido enviado</label>
            </value>
            <value>
                <fullName>WAIT_FRAUD_MANUAL_CHECK</fullName>
                <label>Aguardando validação manual de Fraude</label>
            </value>
            <value>
                <fullName>AMDOCS_DELINQUENCY_CHECK</fullName>
            </value>
            <value>
                <fullName>AMDOCS_GET_CUSTOMER_INFO</fullName>
            </value>
            <value>
                <fullName>AMDOCS_LINE_NOT_CEASED</fullName>
            </value>
            <value>
                <fullName>AMDOCS_WIRELESS_VALIDATION_SUCCESS</fullName>
            </value>
            <value>
                <fullName>SKIP_FRAUD_ANALYSIS</fullName>
                <label>Análise de crédito concluída</label>
            </value>
            <value>
                <fullName>UPDATE_CUSTOMER_PARTIAL</fullName>
                <label>Atualização parcial do cliente na AMDOCS</label>
            </value>
            <value>
                <fullName>AUTO_DEBIT_ACTIVATION_FAIL</fullName>
            </value>
            <value>
                <fullName>AUTO_DEBIT_ACTIVATION_SUCCESS</fullName>
            </value>
            <value>
                <fullName>CLARIFY_ADDRESS</fullName>
                <label>Averiguar endereço - pedido enviado</label>
            </value>
            <value>
                <fullName>CLARIFY_DELIVERY_FAIL</fullName>
                <label>Averiguar falha na entrega - pedido enviado</label>
            </value>
            <value>
                <fullName>CLARIFY_LABEL_FAIL</fullName>
                <label>Averiguar falha na etiqueta - pedido enviado</label>
            </value>
            <value>
                <fullName>PORT_IN_STATUS_APPROVED</fullName>
                <label>Bilhete de portabilidade aprovado</label>
            </value>
            <value>
                <fullName>PORT_IN_STATUS_CANCEL</fullName>
                <label>Bilhete de Portabilidade cancelado</label>
            </value>
            <value>
                <fullName>PORT_IN_STATUS_ERROR</fullName>
                <label>Bilhete de Portabilidade com erro</label>
            </value>
            <value>
                <fullName>PORT_IN_STATUS_CREATED</fullName>
                <label>Bilhete de Portabilidade criado</label>
            </value>
            <value>
                <fullName>PORT_IN_STATUS_ENABLE</fullName>
                <label>Bilhete de Portabilidade Habilitado</label>
            </value>
            <value>
                <fullName>PORT_IN_STATUS_NOT_APPROVED</fullName>
                <label>Bilhete de portabilidade não aprovado</label>
            </value>
            <value>
                <fullName>BILLING_CYCLE_UPDATED</fullName>
            </value>
            <value>
                <fullName>BILLING_NOTIFICATION</fullName>
                <label>Billing Ativado</label>
            </value>
            <value>
                <fullName>CANCEL_ORDER_REP_AMDOCS_FAT_ABERTO</fullName>
            </value>
            <value>
                <fullName>CANCEL_ORDER_REP_FRAUDE_CLEARSALE</fullName>
            </value>
            <value>
                <fullName>CANCEL_ORDER_REP_POWCURVE</fullName>
            </value>
            <value>
                <fullName>CANCEL_ORDER_REP_SCORE_POWCURVE_AMDOCS</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
                <label>Cancelado - pedido cancelado</label>
            </value>
            <value>
                <fullName>CHECK_AMDOCS_LINE_CEASED_SUCESS</fullName>
            </value>
            <value>
                <fullName>CHECK_ORDER_DOWN_CTRL_PRE_INVALID</fullName>
            </value>
            <value>
                <fullName>CHECK_ORDER_DOWN_CTRL_PRE_VALID</fullName>
            </value>
            <value>
                <fullName>CHECK_ORDER_DOWN_POS_PRE_VALID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>