force-app/main/default/objects/OrderIssued__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>Possíveis valores: ERROR | SUCCESS</description>
    <label>Código do status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>