force-app/main/default/objects/OrderIssued__c/fields/UserLogin__c.field-meta.xml
<CustomField>
    <fullName>UserLogin__c</fullName>
    <formula>Owner:User.Login__c</formula>
    <label>Login de Rede do Operador</label>
    <type>Text</type>
</CustomField>