force-app/main/default/objects/OrderIssued__c/recordTypes/MigrationExchangePlan.recordType-meta.xml
<RecordType>
    <fullName>MigrationExchangePlan</fullName>
    <active>true</active>
    <description>Tipo de Registro utilizado para a migração/troca de plano</description>
    <label>Migração/Troca de Plano</label>
</RecordType>